- Start of Visual Studio extensions
- Minor fix

- Work on VS Extension

- Started Wizard

- Started Wizard

- Started Wizard

- Started Wizard

- Started Wizard

- Started Wizard

- Started Wizard

- Started Wizard

- Added appveyor.yml

- Added appveyor.yml

- Added appveyor.yml

- Added appveyor.yml

- Added appveyor.yml

- Started Wizard

- Added appveyor.yml

- Added appveyor.yml

- Added appveyor.yml

- Added appveyor.yml

- Started Wizard

- Updated appveyor.yml

- Updated appveyor.yml

- Updated appveyor.yml

- Updated appveyor.yml

- Updated appveyor.yml

- Updated appveyor.yml

- Updated appvegor.yml

- Fixed XML comment

- Fixed XML comments and warnings

- Fixed XML comments

- Fixed warning messages

- Fixed warning messages

- Updated nuget libraries

- Added MOSA icon

- Added nuspec files

- Remove Mosa.Starter.x86 project

- Added nuspec files

- Updated nuspec files

- Updated nuspec files

- Updated appveyor.yml

- Updated appveyor.yml

- Updated appveyor.yml

- Updated appveyor.yml

- Updated appveyor.yml & nuspec files

- Updated appveyor.yml & nuspec files

- Work on VS Extension

- Updated xunit & scoping testes on failed test cases

- Updated xunit & scoping testes on failed test cases

--- a/Source/Korlib/Korlib.csproj
+++ b/Source/Korlib/Korlib.csproj
@@ -191,6 +191,9 @@
     <Compile Include="System.Runtime.InteropServices\ComVisible.cs" />
     <Compile Include="System.Runtime.InteropServices\OutAttribute.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Korlib.nuspec" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.Targets" />
   <PropertyGroup>
     <CompileDependsOn>GenerateCompilerResponseFile;$(CompileDependsOn)</CompileDependsOn>
