--- a/Source/Mosa.Utility.BootImage/Mosa.Utility.BootImage.csproj
+++ b/Source/Mosa.Utility.BootImage/Mosa.Utility.BootImage.csproj
@@ -44,6 +44,7 @@
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>..\..\bin\Mosa.Utility.BootImage.xml</DocumentationFile>
     <Prefer32Bit>false</Prefer32Bit>
+    <NoWarn>1591</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="BlockFileStream.cs" />
