--- a/Source/Mosa.Utility.RSP/Mosa.Utility.RSP.csproj
+++ b/Source/Mosa.Utility.RSP/Mosa.Utility.RSP.csproj
@@ -36,6 +36,7 @@
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>..\..\bin\Mosa.Utility.DebugEngine.xml</DocumentationFile>
     <Prefer32Bit>false</Prefer32Bit>
+    <NoWarn>1591</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
