--- a/Source/Mosa.BootLoader.x86/Mosa.BootLoader.x86.csproj
+++ b/Source/Mosa.BootLoader.x86/Mosa.BootLoader.x86.csproj
@@ -128,5 +128,8 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="ReadMe.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
