--- a/Source/Mosa.Tool.Debugger/Mosa.Tool.Debugger.csproj
+++ b/Source/Mosa.Tool.Debugger/Mosa.Tool.Debugger.csproj
@@ -37,6 +37,7 @@
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>..\..\bin\Mosa.Tool.Debugger.xml</DocumentationFile>
     <Prefer32Bit>false</Prefer32Bit>
+    <NoWarn>1591</NoWarn>
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject>Mosa.Tool.Debugger.Program</StartupObject>
