--- a/Source/Mosa.VisualStudio.Wizard/Mosa.VisualStudio.Wizard.csproj
+++ b/Source/Mosa.VisualStudio.Wizard/Mosa.VisualStudio.Wizard.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Mosa.VisualStudio.Wizard</RootNamespace>
     <AssemblyName>Mosa.VisualStudio.Wizard</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
