--- a/Source/Mosa.Tool.Launcher/Mosa.Tool.Launcher.csproj
+++ b/Source/Mosa.Tool.Launcher/Mosa.Tool.Launcher.csproj
@@ -53,6 +53,7 @@
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>..\..\bin\Mosa.Tool.Debugger.xml</DocumentationFile>
     <Prefer32Bit>false</Prefer32Bit>
+    <NoWarn>1591</NoWarn>
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject>Mosa.Tool.Launcher.Program</StartupObject>
