--- a/Source/Mosa.Starter.x86/Mosa.Starter.x86.csproj
+++ b/Source/Mosa.Starter.x86/Mosa.Starter.x86.csproj
@@ -69,25 +69,26 @@
     <Compile Include="Boot.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Mosa.ClassLib\Mosa.ClassLib.csproj">
-      <Project>{27A3C89C-1967-45FF-A77E-94F44995C42C}</Project>
-      <Name>Mosa.ClassLib</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Mosa.Kernel.x86\Mosa.Kernel.x86.csproj">
-      <Project>{FF099D48-3FA5-4ED6-BBA0-1497D734962A}</Project>
-      <Name>Mosa.Kernel.x86</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Mosa.Runtime.x86\Mosa.Runtime.x86.csproj">
-      <Project>{A47B7998-4EE8-4AF8-9373-C664FDEDDC65}</Project>
-      <Name>Mosa.Runtime.x86</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Mosa.Runtime\Mosa.Runtime.csproj">
-      <Project>{77961864-db33-4189-804f-d774022c96e2}</Project>
-      <Name>Mosa.Runtime</Name>
-    </ProjectReference>
+    <None Include="app.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
+    <Reference Include="Mosa.ClassLib, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Mosa.ClassLib.1.0.0.0\lib\Mosa.ClassLib.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Mosa.Kernel.x86, Version=0.0.0.0, Culture=neutral">
+      <HintPath>..\packages\Mosa.Kernel.x86.1.0.0.0\lib\Mosa.Kernel.x86.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Mosa.Runtime, Version=0.0.0.0, Culture=neutral">
+      <HintPath>..\packages\Mosa.Runtime.1.0.0.0\lib\Mosa.Runtime.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Mosa.Runtime.x86, Version=0.0.0.0, Culture=neutral">
+      <HintPath>..\packages\Mosa.Runtime.x86.1.0.0.0\lib\Mosa.Runtime.x86.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
