--- a/Source/Mosa.VisualStudio.Template/Mosa Project/Mosa C# Project/Mosa.Starter.x86.csproj
+++ b/Source/Mosa.VisualStudio.Template/Mosa Project/Mosa C# Project/Mosa.Starter.x86.csproj
@@ -4,12 +4,12 @@
     <ProjectType>Local</ProjectType>
     <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{$guid1$}</ProjectGuid>
+    <ProjectGuid>{F1776FF2-A727-4FAF-B6BE-D37D6B019031}</ProjectGuid>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <AssemblyKeyContainerName>
     </AssemblyKeyContainerName>
-    <AssemblyName>$safeprojectname$</AssemblyName>
+    <AssemblyName>Mosa.Starter.x86</AssemblyName>
     <DefaultClientScript>JScript</DefaultClientScript>
     <DefaultHTMLPageLayout>Grid</DefaultHTMLPageLayout>
     <DefaultTargetSchema>IE50</DefaultTargetSchema>
@@ -18,8 +18,8 @@
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>
     </AppDesignerFolder>
-    <RootNamespace>$safeprojectname$</RootNamespace>
-    <StartupObject>$safeprojectname$.Boot</StartupObject>
+    <RootNamespace>Mosa.Starter.x86</RootNamespace>
+    <StartupObject>Mosa.Starter.x86.Boot</StartupObject>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
     <OldToolsVersion>3.5</OldToolsVersion>
@@ -69,25 +69,26 @@
     <Compile Include="Boot.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Mosa.ClassLib\Mosa.ClassLib.csproj">
-      <Project>{27A3C89C-1967-45FF-A77E-94F44995C42C}</Project>
-      <Name>Mosa.ClassLib</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Mosa.Kernel.x86\Mosa.Kernel.x86.csproj">
-      <Project>{FF099D48-3FA5-4ED6-BBA0-1497D734962A}</Project>
-      <Name>Mosa.Kernel.x86</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Mosa.Runtime.x86\Mosa.Runtime.x86.csproj">
-      <Project>{A47B7998-4EE8-4AF8-9373-C664FDEDDC65}</Project>
-      <Name>Mosa.Runtime.x86</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Mosa.Runtime\Mosa.Runtime.csproj">
-      <Project>{77961864-db33-4189-804f-d774022c96e2}</Project>
-      <Name>Mosa.Runtime</Name>
-    </ProjectReference>
+    <None Include="app.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
+    <Reference Include="Mosa.ClassLib, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Mosa.ClassLib.1.0.0.0\lib\Mosa.ClassLib.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Mosa.Kernel.x86, Version=0.0.0.0, Culture=neutral">
+      <HintPath>..\packages\Mosa.Kernel.x86.1.0.0.0\lib\Mosa.Kernel.x86.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Mosa.Runtime, Version=0.0.0.0, Culture=neutral">
+      <HintPath>..\packages\Mosa.Runtime.1.0.0.0\lib\Mosa.Runtime.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Mosa.Runtime.x86, Version=0.0.0.0, Culture=neutral">
+      <HintPath>..\packages\Mosa.Runtime.x86.1.0.0.0\lib\Mosa.Runtime.x86.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
