--- a/Source/Mosa.ClassLib/Mosa.ClassLib.nuspec
+++ b/Source/Mosa.ClassLib/Mosa.ClassLib.nuspec
@@ -12,7 +12,7 @@
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
 		<description>MOSA common libraries</description>
 		<releaseNotes></releaseNotes>
-		<copyright>Copyright 2017</copyright>
+		<copyright>Copyright © 2017</copyright>
 		<tags>MOSA Compiler</tags>
 	</metadata>
 	<files>
