--- a/Source/Mosa.Tool.Launcher/Mosa.Tool.Launcher.nuspec
+++ b/Source/Mosa.Tool.Launcher/Mosa.Tool.Launcher.nuspec
@@ -1,18 +1,18 @@
 <?xml version="1.0"?>
 <package >
 	<metadata>
-		<id>$id$</id>
-		<version>$version$</version>
+		<id>Mosa.Tool.Launcher</id>
+		<version>1.0.0.0</version>
 		<title>Mosa.Tool.Launcher</title>
-		<authors>$author$</authors>
+		<authors>MOSA Project</authors>
 		<owners>MOSA Project</owners>
 		<licenseUrl>https://github.com/mosa/MOSA-Project/blob/master/LICENSE.txt</licenseUrl>
 		<projectUrl>http://www.mosa-project.org</projectUrl>
 		<iconUrl>https://raw.githubusercontent.com/tgiphil/MOSA-Project/VSIXProject/Source/Art/Mosa%20Icon.png</iconUrl>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
-		<description>MOSA Launcher Tool</description>
+		<description>MOSA Explorer Tool</description>
 		<releaseNotes></releaseNotes>
-		<copyright>$copyright$</copyright>
+		<copyright>Copyright © 2017</copyright>
 		<tags>MOSA Compiler</tags>
 	</metadata>
 </package>
