--- a/Source/Mosa.Tool.Launcher/Mosa.Tool.Launcher.nuspec
+++ b/Source/Mosa.Tool.Launcher/Mosa.Tool.Launcher.nuspec
@@ -2,7 +2,7 @@
 <package >
 	<metadata>
 		<id>Mosa.Tool.Launcher</id>
-		<version>1.0.0.0</version>
+		<version>1.0.1.0</version>
 		<title>Mosa.Tool.Launcher</title>
 		<authors>MOSA Project</authors>
 		<owners>MOSA Project</owners>
@@ -10,9 +10,22 @@
 		<projectUrl>http://www.mosa-project.org</projectUrl>
 		<iconUrl>https://raw.githubusercontent.com/tgiphil/MOSA-Project/VSIXProject/Source/Art/Mosa%20Icon.png</iconUrl>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
-		<description>MOSA Explorer Tool</description>
+		<description>MOSA Launcher Tool</description>
 		<releaseNotes></releaseNotes>
 		<copyright>Copyright © 2017</copyright>
 		<tags>MOSA Compiler</tags>
+		<dependencies>
+			<dependency id="Mosa.Compiler.Framework" version="1.0.0" />
+			<dependency id="MetroModernUI" version="1.4.0.0" />
+		</dependencies>
 	</metadata>
+	<files>
+		<file src="..\..\bin\Mosa.Tool.Launcher.exe" target="tools" />
+		<file src="..\..\bin\Mosa.Platform.ARMv6.dll" target="lib" />
+		<file src="..\..\bin\Mosa.Platform.x86.dll" target="lib" />
+		<file src="..\..\bin\Mosa.Utility.Aot.dll" target="lib" />
+		<file src="..\..\bin\Mosa.Utility.BootImage.dll" target="lib" />
+		<file src="..\..\bin\Mosa.Utility.GUI.Common.dll" target="lib" />
+		<file src="..\..\bin\Mosa.Utility.Launcher.dll" target="lib" />
+	</files>
 </package>
