--- a/Source/Mosa.Tool.Launcher/Mosa.Tool.Launcher.nuspec
+++ b/Source/Mosa.Tool.Launcher/Mosa.Tool.Launcher.nuspec
@@ -21,11 +21,11 @@
 	</metadata>
 	<files>
 		<file src="..\..\bin\Mosa.Tool.Launcher.exe" target="tools" />
-		<file src="..\..\bin\Mosa.Platform.ARMv6.dll" target="lib" />
-		<file src="..\..\bin\Mosa.Platform.x86.dll" target="lib" />
-		<file src="..\..\bin\Mosa.Utility.Aot.dll" target="lib" />
-		<file src="..\..\bin\Mosa.Utility.BootImage.dll" target="lib" />
-		<file src="..\..\bin\Mosa.Utility.GUI.Common.dll" target="lib" />
-		<file src="..\..\bin\Mosa.Utility.Launcher.dll" target="lib" />
+		<file src="..\..\bin\Mosa.Platform.ARMv6.dll" target="tools" />
+		<file src="..\..\bin\Mosa.Platform.x86.dll" target="tools" />
+		<file src="..\..\bin\Mosa.Utility.Aot.dll" target="tools" />
+		<file src="..\..\bin\Mosa.Utility.BootImage.dll" target="tools" />
+		<file src="..\..\bin\Mosa.Utility.GUI.Common.dll" target="tools" />
+		<file src="..\..\bin\Mosa.Utility.Launcher.dll" target="tools" />
 	</files>
 </package>
