--- a/Source/Mosa.VisualStudio.Wizard/Mosa.VisualStudio.Wizard.csproj
+++ b/Source/Mosa.VisualStudio.Wizard/Mosa.VisualStudio.Wizard.csproj
@@ -12,6 +12,7 @@
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
+	<DeployExtension Condition="'$(AppVeyor)' != ''">False</DeployExtension>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
