--- a/Source/Mosa.Tool.Explorer/Mosa.Tool.Explorer.nuspec
+++ b/Source/Mosa.Tool.Explorer/Mosa.Tool.Explorer.nuspec
@@ -21,10 +21,10 @@
 	</metadata>
 	<files>
 		<file src="..\..\bin\Mosa.Tool.Explorer.exe" target="tools" />
-		<file src="..\..\bin\Mosa.Compiler.Pdb.dll" target="lib" />
-		<file src="..\..\bin\Mosa.Platform.ARMv6.dll" target="lib" />
-		<file src="..\..\bin\Mosa.Platform.x86.dll" target="lib" />
-		<file src="..\..\bin\Mosa.Utility.CodeDomCompiler.dll" target="lib" />
-		<file src="..\..\bin\Mosa.Utility.GUI.Common.dll" target="lib" />
+		<file src="..\..\bin\Mosa.Compiler.Pdb.dll" target="tools" />
+		<file src="..\..\bin\Mosa.Platform.ARMv6.dll" target="tools" />
+		<file src="..\..\bin\Mosa.Platform.x86.dll" target="tools" />
+		<file src="..\..\bin\Mosa.Utility.CodeDomCompiler.dll" target="tools" />
+		<file src="..\..\bin\Mosa.Utility.GUI.Common.dll" target="tools" />
 	</files>
 </package>
