- Updated appveyor.yml & nuspec files

--- a/Source/Mosa.VisualStudio.Extension/Mosa.VisualStudio.Extension.csproj
+++ b/Source/Mosa.VisualStudio.Extension/Mosa.VisualStudio.Extension.csproj
@@ -3,7 +3,8 @@
   <PropertyGroup>
     <MinimumVisualStudioVersion>14.0</MinimumVisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
-    <TargetFrameworkProfile />
+	  <DeployExtension Condition="'$(AppVeyor)' != ''">False</DeployExtension>
+	  <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup>
     <SignAssembly>true</SignAssembly>
