- Work on VS Extension

--- a/Source/Mosa.VisualStudio.Extension/Mosa.VisualStudio.Extension.csproj
+++ b/Source/Mosa.VisualStudio.Extension/Mosa.VisualStudio.Extension.csproj
@@ -3,8 +3,11 @@
   <PropertyGroup>
     <MinimumVisualStudioVersion>14.0</MinimumVisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
-	  <DeployExtension Condition="'$(AppVeyor)' != ''">False</DeployExtension>
-	  <TargetFrameworkProfile />
+    <DeployExtension Condition="'$(AppVeyor)' != ''">False</DeployExtension>
+    <TargetFrameworkProfile />
+    <StartAction>Program</StartAction>
+    <StartProgram>$(DevEnvDir)\devenv.exe</StartProgram>
+    <StartArguments>/rootsuffix Exp</StartArguments>
   </PropertyGroup>
   <PropertyGroup>
     <SignAssembly>true</SignAssembly>
