--- a/Source/Mosa.HardwareSystem/Mosa.HardwareSystem.csproj
+++ b/Source/Mosa.HardwareSystem/Mosa.HardwareSystem.csproj
@@ -67,8 +67,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Device.cs" />
-    <Compile Include="DeviceDriver.cs" />
-    <Compile Include="DeviceDriverPhysicalMemoryAttribute.cs" />
+    <Compile Include="DeviceDriverPhysicalMemory.cs" />
     <Compile Include="DeviceDriverRegistry.cs" />
     <Compile Include="DeviceDriverStartStatus.cs" />
     <Compile Include="DeviceManager.cs" />
@@ -78,23 +77,25 @@
     <Compile Include="HardwareDevice.cs" />
     <Compile Include="HardwareResources.cs" />
     <Compile Include="IDevice.cs" />
+    <Compile Include="DeviceBusType.cs" />
     <Compile Include="IDeviceDriver.cs" />
     <Compile Include="IDMAChannel.cs" />
     <Compile Include="IFindDevice.cs" />
     <Compile Include="IHardwareAbstraction.cs" />
     <Compile Include="IHardwareDevice.cs" />
     <Compile Include="IIOPorts.cs" />
+    <Compile Include="ISADeviceDriver.cs" />
     <Compile Include="IMemory.cs" />
     <Compile Include="InterruptHandler.cs" />
     <Compile Include="InterruptManager.cs" />
     <Compile Include="IOPortRegion.cs" />
     <Compile Include="IOPortResources.cs" />
     <Compile Include="IPCIController.cs" />
-    <Compile Include="ISADeviceDriverAttribute.cs" />
+    <Compile Include="IISADeviceDriver.cs" />
     <Compile Include="MemoryRegion.cs" />
     <Compile Include="MemoryResources.cs" />
     <Compile Include="PCIControllerManager.cs" />
-    <Compile Include="PCIDeviceDriverAttribute.cs" />
+    <Compile Include="IPCIDeviceDriver.cs" />
     <Compile Include="PCI\AddressType.cs" />
     <Compile Include="PCI\BaseAddress.cs" />
     <Compile Include="PCI\ClassCodeTable.cs" />
