--- a/Source/Mosa.Tool.GDBDebugger/Mosa.Tool.GDBDebugger.csproj
+++ b/Source/Mosa.Tool.GDBDebugger/Mosa.Tool.GDBDebugger.csproj
@@ -58,11 +58,27 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ControlView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ControlView.designer.cs">
+      <DependentUpon>ControlView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GDB\Register.cs" />
+    <Compile Include="GDB\VMState.cs" />
+    <Compile Include="GDB\X86.cs" />
+    <Compile Include="GDB\RegisterDefinition.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="MainForm.designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="OutputView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="OutputView.designer.cs">
+      <DependentUpon>OutputView.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -76,6 +92,18 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <Compile Include="RegisterView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RegisterView.designer.cs">
+      <DependentUpon>RegisterView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="StatusView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="StatusView.designer.cs">
+      <DependentUpon>StatusView.cs</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -100,15 +128,27 @@
     <Folder Include="Resources\" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="ControlView.resx">
+      <DependentUpon>ControlView.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="DebugDockContent.resx">
       <DependentUpon>DebugDockContent.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="OutputView.resx">
+      <DependentUpon>OutputView.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="RegisterView.resx">
+      <DependentUpon>RegisterView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="StatusView.resx">
+      <DependentUpon>StatusView.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
