--- a/Source/Mosa.Tool.GDBDebugger/Mosa.Tool.GDBDebugger.csproj
+++ b/Source/Mosa.Tool.GDBDebugger/Mosa.Tool.GDBDebugger.csproj
@@ -64,8 +64,10 @@
     <Compile Include="ControlView.designer.cs">
       <DependentUpon>ControlView.cs</DependentUpon>
     </Compile>
+    <Compile Include="GDB\X86Platform.cs" />
+    <Compile Include="GDB\BasePlatform.cs" />
     <Compile Include="GDB\Register.cs" />
-    <Compile Include="GDB\VMState.cs" />
+    <Compile Include="GDB\Connector.cs" />
     <Compile Include="GDB\X86.cs" />
     <Compile Include="GDB\RegisterDefinition.cs" />
     <Compile Include="MainForm.cs">
